Added Postgresql configuration.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -311,10 +311,10 @@ play.db {
   }
 }
 
-#db.default.driver=org.postgresql.Driver
-#db.default.user=postgres
-#db.default.password=qwerty
-#db.default.url="jdbc:postgresql://localhost:5432/main"
+db.default.driver=org.postgresql.Driver
+db.default.user=postgres
+db.default.password=qwerty
+db.default.url="jdbc:postgresql://localhost:5432/main"
 
 #db.default.driver=org.postgresql.Driver
 #db.default.url="jdbc:postgresql://localhost:5432/postgres"
