Added ApplicationLoader for DependencyInjection. Added TokenModule for sending request and retrieving token - GET method.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -63,6 +63,8 @@ play.modules {
   #disabled += ""
 }
 
+play.application.loader = app.MainApplicationLoader
+
 ## IDE
 # https://www.playframework.com/documentation/latest/IDE
 # ~~~~~
@@ -320,6 +322,9 @@ db.default.url="jdbc:postgresql://localhost:5432/main"
 #db.default.url="jdbc:postgresql://localhost:5432/postgres"
 #db.default.username = "user"
 #db.default.password = "pass"
+
+news.apiLogin="newsApi"
+news.apiPassword="newsSecret"
 
 ## JDBC Datasource
 # https://www.playframework.com/documentation/latest/JavaDatabase
